# snake-cpp

./: .gitmodules  CMakeLists.txt  README.md  bot.hpp  camera.hpp  console_linux.hpp  console_windows.hpp  cube.frag  cube.vert  game_logic.hpp  glfwmain.cpp  grid.fs  grid.vs  lighting.fs  lighting.vs  main.cpp  mountains.fs  mountains.vs  openglutils.hpp  shader.hpp  skybox.fs  skybox.vs  star.fs  star.vs  stdout_render.hpp  sun.fs  sun.vs  vec2i.h  windows_console_input.hpp  windows_stdout_render.hpp
